# cmake-azuresdk-wrapper

./: .gitmodules  CMakeLists.txt
lib/cmake-azure-sdk-for-c/: CMakeLists.txt
lib/cmake-azure-sdk-for-c/libs/core/: core.cmake
lib/cmake-azure-sdk-for-c/libs/iot/: core.cmake  hub.cmake  pnp.cmake  provisioning.cmake
lib/cmake-azure-sdk-for-c/libs/platform/: nohttp.cmake  noplatform.cmake  posix.cmake
src/: main.c
